<resources>
    <string name="app_name">Online Doctor</string>
    <string name="register">REGISTER</string>
    <string name="access_token">pk.eyJ1IjoicmlmYXQyMjIxIiwiYSI6ImNrOWMybXVvbjAwdGgzdHBmMnFzZWR6eXQifQ.mR1wwf0eO3DZSxlzId-0cA</string>
    <string name="login_phone_number_hint">Phone Number</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="DEBUGING_TAG">DEBUGING_TAG</string>

    //radio button option
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="chamber">Doctor\'s Chamber</string>
    <string name="pathology">Pathology Center</string>
    <string name="register_nid_hint">NID Number</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_others">Others</string>
    <string name="gender_label">Gender</string>
    <string name="blood_group_label">Blood Group</string>
    <string name="pick_date">Select Date Of Birth</string>
    <string name="register_doctor_bmdcId_hint">BMDC Reg</string>

    <string name="map_key">"AIzaSyA7vacsW9bch9OJHKLuMgP2hasTRMOn-bw"</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA7vacsW9bch9OJHKLuMgP2hasTRMOn-bw</string>


    <string name="doctor_specialized_area_label">Specialized Area</string>
    <string name="doctor_register_signup_designation_hint">Designaion</string>
    <string name="chamber_register_signup_address_hint">Chabmer Adderss</string>
    <string name="chamber_district_label">District</string>
    <string name="chamber_subdistrict_label">Sub-District</string>
    <string name="pathology_center_district_label">District</string>
    <string name="pathology_center_subdistrict_label">Sub District</string>
    <string name="pathology_center_register_signup_address_hint">Pathology Center Address</string>

    <!--    last known location string-->

    <string name="LAST_KNOWN_LOCATION_FILE_NAME">last_location</string>
    <string name="LAST_KNOWN_LOCATION_LATITUDE_PREFERENCE_KEY">last_known_location_latitude</string>
    <string name="LAST_KNOWN_LOCATION_LONGITUDE_PREFERENCE_KEY">last_known_location_longitude</string>

    <!--login string -->
    <string name="LOGIN_USER_FILE_NAME">login_user</string>
    <string name="LOGIN_USER_PHONE_NUMBER_PREFERENCE_KEY">login_user_phone_number</string>
    <string name="LOGIN_USER_NAME_PREFERENCE_KEY">login_user_name</string>
    <string name="LOGIN_USER_ROLE_PREFERENCE_KEY">login_user_role</string>
    <string name="LOGIN_USER_ID_PREFERENCE_KEY">login_user_id</string>
    <string name="title_activity_chamber_visiting_schedule_for_patient">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="categories">Categories</string>
</resources>