<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        android:background="@color/white"
        >

        <TextView
            style="@style/headerTextPrimary"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Mobile Number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_phone_number_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:backgroundTint="@color/black"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Register" />

<!--        <TextView-->
<!--            style="@style/parent"-->
<!--            android:textAlignment="center"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/primaryTextColor"-->
<!--            android:text="@string/signup_login_hint"-->
<!--            android:layout_marginTop="@dimen/loginViewsMargin"/>-->

    </LinearLayout>
</androidx.cardview.widget.CardView>
